# Jakal-Net

./: .gitignore  AGENTS.md  README.md  launch_adamwfused_lr20_warmup500_remote.sh  launch_adamwfused_lr30_warmup500_remote.sh  launch_adamwfused_lr50_warmup500_remote.sh  launch_ffn_hold_remote.sh  launch_lr14_warmup200_remote.sh  launch_lr15_warmup500_remote.sh  launch_lr20_warmup200_remote.sh  launch_lr20_warmup500_repro_remote.sh  launch_noffn_baseline_remote.sh  launch_noffn_oldgood_current_remote.sh  launch_noffn_oldgood_r256_3epoch_current_remote.sh  launch_noffn_oldgood_r384_current_remote.sh  launch_noffn_oldgood_rebuilt_remote.sh  launch_noffn_repro_hold4k_remote.sh  launch_nolinear_nomemory_r256_3epoch_current_remote.sh  launch_warmup500_remote.sh  pyproject.toml  requirements-base.txt  requirements.txt
.venv-dml/: pyvenv.cfg
docs/: 2026-05-04-nomemory-optimization-notes.md  remote_patch_inventory.md
native/: jakal_net_native.cpp  jakal_net_native_cuda.cu  jakal_net_native_cuda.h
notebooks/: ar_model_sweep_experiments.ipynb  ar_teacher_forced_training.ipynb
reports/: 2026-05-02-rank-study.md
scripts/: activate_env.sh  benchmark_bilinear_propagation_fb.py  benchmark_causal_memory_prefetch.py  benchmark_causal_memory_step.py  benchmark_h1_tensorcore_propagation.py  benchmark_native_dense.py  benchmark_operators.py  benchmark_query_block_training.py  benchmark_random_batch_sizes.py  benchmark_signed_smoothmax_triton.py  build_and_train_causal_memory_full_v1.sh  build_causal_memory_corpora_parallel.py  build_causal_memory_manifest.py  lm_experiment_utils.py  (+34 more)
(+249 files in other folders)
