[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jakal-net"
version = "0.1.0"
description = "Latent workspace multimodal propagation model in PyTorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]
